# LTC3

./: .gitignore  pyproject.toml  pyright.json  setup.py
example/: aug.py  conductivity.py  config.yaml  dataug.126958  matpes_r2scan.csv  mp_r2scan.csv  omat24.csv  pet_mad.csv  phonondb.csv  plot.py  rta_exp.csv  test.ipynb
ltc3/: __init__.py  main.py
ltc3/calculator/: dpa_calculator.py  esen_calculator.py  loader.py  mace_calculator.py  orb_calculator.py  relax_tools.py  sevenn_calculator.py  test_calculator.py  uma_calculator.py
ltc3/scripts/: conductivity.py  fc2.py  fc3.py  fcs.py  kappa.py  main.py  parse_input.py  process_conductivity.py  process_fcs.py  relax.py
ltc3/thirdorder/: thirdorder_ase.py  thirdorder_core.c
ltc3/util/: calc.py  logger.py  phonopy_utils.py  relax.py
